--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="about-container">
             <h4>Подробнее обо мне</h4>
             <div class="about-cards">
-                <a class="about-card" href="" target="_blank">
+                <a class="about-card" href="https://t.me/r_o_g_o_z_i_k" target="_blank">
                     <svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect x="0.922852" y="0.777344" width="35.8482" height="35.8482" rx="17.9241" fill="white" />
                         <path d="M14.502 23.0471L23.7356 13.8135M23.7356 13.8135V23.0471M23.7356 13.8135H14.502"
@@ -44,7 +44,7 @@
                     </svg>
                     <p>Портфолио</p>
                 </a>
-                <a class="about-card" href="" target="_blank">
+                <a class="about-card" href="mailto:anastasiatilileykina@gmail.com" target="_blank">
                     <svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect x="0.922852" y="0.777344" width="35.8482" height="35.8482" rx="17.9241" fill="white" />
                         <path d="M14.502 23.0471L23.7356 13.8135M23.7356 13.8135V23.0471M23.7356 13.8135H14.502"
